--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "react-dom": "^19.2.0",
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
-    "appwrite": "14.0.1",
-    "recharts": "2.12.2"
+    "appwrite": "14.0.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
